tests/fail/os_windows/ch_nightly/input_not_str.stderr
error[E0308]: mismatched types
   --> tests/fail/os_windows/ch_nightly/input_not_str.rs:2:20
    |
2   |     sscanf::scanf!(5usize, "{}", usize);
    |     ---------------^^^^^^--------------
    |     |              |
    |     |              expected `str`, found `usize`
    |     arguments to this function are incorrect
    |
    = note: expected reference `&str`
               found reference `&usize`
note: associated function defined here
   --> $RUST/core/src/str/mod.rs
    |
    |     pub const fn get<I: ~const SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
    |                  ^^^

error[E0308]: mismatched types
   --> tests/fail/os_windows/ch_nightly/input_not_str.rs:3:20
    |
3   |     sscanf::scanf!(b"5", "{}", usize);
    |     ---------------^^^^--------------
    |     |              |
    |     |              expected `str`, found `&[u8; 1]`
    |     arguments to this function are incorrect
    |
    = note: expected reference `&str`
               found reference `&&'static [u8; 1]`
note: associated function defined here
   --> $RUST/core/src/str/mod.rs
    |
    |     pub const fn get<I: ~const SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
    |                  ^^^
